# dotnot

./: .gitignore  pyproject.toml
dotnot/: __init__.py  parsing.py
dotnot/primitives/: __init__.py  base.py
examples/: media-catalog.not  mediaplayer.not
reports/: .keepme
tests/: test_parsing.py
tests/primitives/: test_base.py
