[tool.poetry]
name = "dotnot"
version = "0.1.0"
description = ""
authors = ["latrokles <latrokles@gmail.com>"]
readme = "README.md"
include = ["examples"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
pytest-html = "^4.0.2"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=dotnot --cov-report=html:reports/coverage --cov-report=term --html=reports/tests/index.html"
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
